--- a/web/web-admin/src/main/resources/application.yml
+++ b/web/web-admin/src/main/resources/application.yml
@@ -20,3 +20,10 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+com:
+  minio:
+    point: http://192.168.6.100:9000
+    username: minioadmin
+    password: minioadmin
+    bucket: lease
