--- a/web/web-admin/src/main/resources/application.yml
+++ b/web/web-admin/src/main/resources/application.yml
@@ -19,12 +19,15 @@ spring:
       maximum-pool-size: 12 #连接池最大连接数，默认是10
       minimum-idle: 10 #最小空闲连接数量
       pool-name: SPHHikariPool # 连接池名称
-
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GTM+8
 #用于打印框架生成的sql语句，便于调试
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
+    map-underscore-to-camel-case: true
+    auto-mapping-behavior: full
 com:
   minio:
     point: http://192.168.6.100:9000
