--- a/web/web-admin/src/main/resources/application.yml
+++ b/web/web-admin/src/main/resources/application.yml
@@ -21,7 +21,9 @@ spring:
       pool-name: SPHHikariPool # 连接池名称
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
-    time-zone: GTM+8
+    time-zone: GMT+8
+  main:
+    allow-circular-references: true
 #用于打印框架生成的sql语句，便于调试
 mybatis-plus:
   configuration:
